Fix order history font-size and contrast Fix #19144

--- a/themes/classic/_dev/css/components/customer.scss
+++ b/themes/classic/_dev/css/components/customer.scss
@@ -188,9 +188,9 @@
 
 /*** Order details page ***/
 .page-order-detail {
-  font-size: 0.875rem;
-  color: $gray;
-
+  #content {
+    font-size: 0.875rem;
+  }
   .box {
     @include customer-area-base-box();
     margin-bottom: 1rem;
